# financial-research-agent-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/agent/: researcher.py  tools.py
app/api/routes/: research.py
app/db/: database.py
app/models/: research.py
app/services/: report_service.py  storage_service.py
