[project]
name = "financial-research-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Abdullateef Alao",email = "aabdullateef557@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "groq (>=1.4.0,<2.0.0)",
    "tavily-python (>=0.7.24,<0.8.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "reportlab (>=4.5.1,<5.0.0)",
    "sqlmodel (>=0.0.38,<0.0.39)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "boto3 (>=1.43.16,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
